--- a/app/views/page/_footer.html.erb
+++ b/app/views/page/_footer.html.erb
@@ -35,26 +35,26 @@
                   <div class="col-md-6 col-sm-6">
                     <div class="contact">
                         <h3 class="title-widget">
-                          <a href="#">Nautica Fashion Co.,Ltd</a>
+                          <a href="#">GET ONE - Shop Mô Hình</a>
                         </h3>
                         <div class="f-content-widget">
                           <div class="social">
                               <ul>
                                 <li><a href="#">twitter<i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#">pinterrest<i class="fa fa-pinterest"></i></a></li>
-                                <li><a href="#">facebook<i class="fa fa-facebook-square"></i></a></li>
+                                <li><a href="https://www.facebook.com/shopmohinhgetone">facebook<i class="fa fa-facebook-square"></i></a></li>
                                 <li><a href="#">behance<i class="fa fa-behance"></i></a></li>
                                 <li><a href="#">dribbble<i class="fa fa-dribbble"></i></a></li>
                               </ul>
                           </div>
                           <div class="text-widget">
                               <p class="address">
-                                <Strong>[ Address ]</Strong> 121 King Street, Melboure, victoria 3000 Australia.
+                                <Strong>[ Địa chỉ ]</Strong> Ngõ 6, Ao Sen, Hà Đông, Hà Nội.
                               </p>
                               <p class="hotline">
-                                <strong>[ Hotline ]</strong> 070-7782-9137  - 
+                                <strong>[ Hotline ]</strong> 070-7782-9137  -
                                 <strong>[ Fax ]</strong> 070-7782-9137  -
-                                <strong>[ Email ]</strong> contact@mautica.com
+                                <strong>[ Email ]</strong> mohinhgetone@gmail.com
                               </p>
                           </div>
                           <div class="Subcribe">
@@ -114,7 +114,7 @@
             <!--  copyright -->
             <div class="copyright">
               <div class="container">
-                  <p class="a-center">Copyrights © 2015 All Rights Reserved by EngoCreative Inc</p>
+<!--                  <p class="a-center">Copyrights © 2015 All Rights Reserved by EngoCreative Inc</p>-->
               </div>
             </div>
             <!-- end copyright -->
