--- a/app/views/page/container/_carousel_product.html.erb
+++ b/app/views/page/container/_carousel_product.html.erb
@@ -4,6 +4,8 @@
   <div class="carousel-product">
     <div class="container">
       <div class="box-title">
+        <div class="title-icon">
+        </div>
         <h3 class="h3-title">
           DRAGON BALL
         </h3>
@@ -37,14 +39,14 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Songoku
+                      Mã: DB01
                     </a>
                   </div>
-                  <div class="price-box price-final_price">
-                                          <span class="price">
-                                             vnd 200.000
-                                          </span>
-                  </div>
+<!--                  <div class="price-box price-final_price">-->
+<!--                                          <span class="price">-->
+<!--                                             Giá: liên hệ-->
+<!--                                          </span>-->
+<!--                  </div>-->
                   <!-- actions -->
 <!--                  <div class="actions">-->
 <!--                    <div class="action add-to-cart">-->
@@ -86,14 +88,14 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Songoku
+                      Mã: DB02
                     </a>
                   </div>
-                  <div class="price-box price-final_price">
-                                          <span class="price">
-                                             vnd 200.000
-                                          </span>
-                  </div>
+<!--                  <div class="price-box price-final_price">-->
+<!--                                          <span class="price">-->
+<!--                                             Giá: liên hệ-->
+<!--                                          </span>-->
+<!--                  </div>-->
                 </div>
               </div>
             </div>
@@ -119,14 +121,14 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Songoku
+                      Mã: DB03
                     </a>
                   </div>
-                  <div class="price-box price-final_price">
-                                          <span class="price">
-                                             vnd 200.000
-                                          </span>
-                  </div>
+<!--                  <div class="price-box price-final_price">-->
+<!--                                          <span class="price">-->
+<!--                                             Giá: liên hệ-->
+<!--                                          </span>-->
+<!--                  </div>-->
                 </div>
               </div>
             </div>
@@ -152,14 +154,14 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Songoku
+                      Mã: DB04
                     </a>
                   </div>
-                  <div class="price-box price-final_price">
-                                          <span class="price">
-                                             vnd 200.000
-                                          </span>
-                  </div>
+<!--                  <div class="price-box price-final_price">-->
+<!--                                          <span class="price">-->
+<!--                                             Giá: liên hệ-->
+<!--                                          </span>-->
+<!--                  </div>-->
                 </div>
               </div>
             </div>
@@ -185,14 +187,14 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Songoku
+                      Mã: DB05
                     </a>
                   </div>
-                  <div class="price-box price-final_price">
-                                          <span class="price">
-                                             vnd 200.000
-                                          </span>
-                  </div>
+<!--                  <div class="price-box price-final_price">-->
+<!--                                          <span class="price">-->
+<!--                                             Giá: liên hệ-->
+<!--                                          </span>-->
+<!--                  </div>-->
                   <!-- actions -->
                   <div class="actions">
                     <div class="action add-to-cart">
@@ -234,14 +236,14 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Songoku
+                      Mã: DB06
                     </a>
                   </div>
-                  <div class="price-box price-final_price">
-                                          <span class="price">
-                                             vnd 200.000
-                                          </span>
-                  </div>
+<!--                  <div class="price-box price-final_price">-->
+<!--                                          <span class="price">-->
+<!--                                             Giá: liên hệ-->
+<!--                                          </span>-->
+<!--                  </div>-->
                 </div>
               </div>
             </div>
@@ -267,14 +269,14 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Songoku
+                      Mã: DB07
                     </a>
                   </div>
-                  <div class="price-box price-final_price">
-                                          <span class="price">
-                                             vnd 200.000
-                                          </span>
-                  </div>
+<!--                  <div class="price-box price-final_price">-->
+<!--                                          <span class="price">-->
+<!--                                             Giá: liên hệ-->
+<!--                                          </span>-->
+<!--                  </div>-->
                 </div>
               </div>
             </div>
