--- a/app/views/page/container/_colection.html.erb
+++ b/app/views/page/container/_colection.html.erb
@@ -3,8 +3,10 @@
   <div class="collection-v1 collection-home ">
 
     <div class="box-title">
+      <div class="title-icon">
+      </div>
       <h3 class="h3-title small">
-        SALE
+        HOT
       </h3>
       <div class="title-icon">
         <img alt="" src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588474399/title-icon_xqwppp.png" alt="">
@@ -24,27 +26,27 @@
                   <div class="deal">
                     <div class="deal-name">
                       <h3 class="widget-title">
-                        <a href="#" title="">URBAN</a>
+                        <a href="#" title="">Đặt ngay</a>
                       </h3>
                     </div>
-                    <div class="deal-time">
-                      <div class="time day">
-                        <h3>03 </h3>
-                        <span>DAYS</span>
-                      </div>
-                      <div class="time hour">
-                        <h3>19 </h3>
-                        <span>Hour</span>
-                      </div>
-                      <div class="time min">
-                        <h3>35</h3>
-                        <span>min</span>
-                      </div>
-                      <div class="time secs">
-                        <h3>59</h3>
-                        <span>secs</span>
-                      </div>
-                    </div>
+<!--                    <div class="deal-time">-->
+<!--                      <div class="time day">-->
+<!--                        <h3>03 </h3>-->
+<!--                        <span>DAYS</span>-->
+<!--                      </div>-->
+<!--                      <div class="time hour">-->
+<!--                        <h3>19 </h3>-->
+<!--                        <span>Hour</span>-->
+<!--                      </div>-->
+<!--                      <div class="time min">-->
+<!--                        <h3>35</h3>-->
+<!--                        <span>min</span>-->
+<!--                      </div>-->
+<!--                      <div class="time secs">-->
+<!--                        <h3>59</h3>-->
+<!--                        <span>secs</span>-->
+<!--                      </div>-->
+<!--                    </div>-->
                   </div>
 
                 </div>
@@ -62,26 +64,8 @@
                 <div class="deal">
                   <div class="deal-name">
                     <h3 class="widget-title">
-                      <a href="#" title="">URBAN</a>
+                      <a href="#" title="">Đặt ngay</a>
                     </h3>
-                  </div>
-                  <div class="deal-time">
-                    <div class="time day">
-                      <h3>03 </h3>
-                      <span>DAYS</span>
-                    </div>
-                    <div class="time hour">
-                      <h3>19 </h3>
-                      <span>Hour</span>
-                    </div>
-                    <div class="time min">
-                      <h3>35</h3>
-                      <span>min</span>
-                    </div>
-                    <div class="time secs">
-                      <h3>59</h3>
-                      <span>secs</span>
-                    </div>
                   </div>
                 </div>
 
@@ -98,26 +82,8 @@
                 <div class="deal">
                   <div class="deal-name">
                     <h3 class="widget-title">
-                      <a href="#" title="">URBAN</a>
+                      <a href="#" title="">Đặt ngay</a>
                     </h3>
-                  </div>
-                  <div class="deal-time">
-                    <div class="time day">
-                      <h3>03 </h3>
-                      <span>DAYS</span>
-                    </div>
-                    <div class="time hour">
-                      <h3>19 </h3>
-                      <span>Hour</span>
-                    </div>
-                    <div class="time min">
-                      <h3>35</h3>
-                      <span>min</span>
-                    </div>
-                    <div class="time secs">
-                      <h3>59</h3>
-                      <span>secs</span>
-                    </div>
                   </div>
                 </div>
 
