--- a/app/views/page/container/_contact.html.erb
+++ b/app/views/page/container/_contact.html.erb
@@ -18,7 +18,7 @@
             <h4 class="des">Business standards services compliant.
               Users without extensible costs.
             </h4>
-            <span>hello@nautica.com</span>
+            <span>mohinhgetone@gmail.com</span>
           </div>
         </div>
         <div class="col-md-4 col-sm-4 col-xs-12 col-hm-4 col-mb-12">
@@ -28,15 +28,15 @@
             <h4 class="des">Business standards services compliant.
               Users without extensible costs.
             </h4>
-            <span>commercial@nautica.com</span>
+            <span>mohinh.store</span>
           </div>
         </div>
         <div class="col-md-4 col-sm-4 col-xs-12 col-hm-4 col-mb-12">
           <div class="item-contact drop-line">
             <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588482822/contact3_wlevoc.jpg" alt="" class="icon">
             <h2 class="title">Visit Our Office</h2>
-            <h4 class="des">262 Milacina Mrest Street, Behansed, Paris, France</h4>
-            <span>(+86) 6 888 888</span>
+            <h4 class="des">Ngõ 6, Ao Sen, Hà Đông, Hà Nội</h4>
+            <span>(+84) 97 574 8525</span>
           </div>
         </div>
       </div>
