--- a/app/views/page/container/_my_service.html.erb
+++ b/app/views/page/container/_my_service.html.erb
@@ -1,6 +1,4 @@
 <!--470x705-->
-
-
 <br><br>
 <main id="maincontent" class="page-main page-main-about">
 <div class="container-fluid">
@@ -30,8 +28,8 @@
             <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_705,w_470/v1613828581/marvel/100000001005635122_10204_001_lw0jrs.jpg" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>ONE PIECE</span></h3>
-            <div class="job">ONE PIECE</div>
+            <h3 class="name"><span>Mã: MV01</span></h3>
+            <div class="job">MARVEL</div>
           </div>
         </div>
       </div>
@@ -47,7 +45,7 @@
             <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,g_north_west,h_705,w_470/v1613828616/marvel/61qle-3UmgL._AC_SX679__tklpw1.jpg" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>MARVEL</span></h3>
+            <h3 class="name"><span>Mã: MV02</span></h3>
             <div class="job">MARVEL</div>
           </div>
         </div>
@@ -64,8 +62,8 @@
             <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_705,w_470/v1613828581/marvel/100000001004237892_10214_nke6ti.jpg" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>DRAGON BALL</span></h3>
-            <div class="job">DRAGON BALL</div>
+            <h3 class="name"><span>Mã: MV03</span></h3>
+            <div class="job">MARVEL</div>
           </div>
         </div>
       </div>
@@ -81,8 +79,8 @@
             <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,g_north_west,h_705,w_470,x_150,y_214/v1613828579/marvel/61cXSyHZiRL._AC_SX679__c3qcj6.jpg" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>DRAGON BALL</span></h3>
-            <div class="job">DRAGON BALL</div>
+            <h3 class="name"><span>Mã: MV04</span></h3>
+            <div class="job">MARVEL</div>
           </div>
         </div>
       </div>
@@ -98,8 +96,8 @@
             <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_705,w_470/v1613829363/marvel/bef5cca4458e8743822c27c27292f43b_ezregg.jpg" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>DRAGON BALL</span></h3>
-            <div class="job">DRAGON BALL</div>
+            <h3 class="name"><span>Mã: MV05</span></h3>
+            <div class="job">MARVEL</div>
           </div>
         </div>
       </div>
@@ -115,8 +113,8 @@
             <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_705,w_470/v1613828580/marvel/imgrc0072685159_i60pvq.jpg" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>DRAGON BALL</span></h3>
-            <div class="job">DRAGON BALL</div>
+            <h3 class="name"><span>Mã: MV06</span></h3>
+            <div class="job">MARVEL</div>
           </div>
         </div>
       </div>
