--- a/app/views/page/container/_slider.html.erb
+++ b/app/views/page/container/_slider.html.erb
@@ -1,55 +1,61 @@
 <!-- slider -->
-<section id="engo-1" class="engo-box">
-  <div class="main-slider margin-bottom-30">
+<section id="engo-1" class="eng-box">
+  <!-- slider -->
+  <div class="main-slider margin-bottom-0">
     <div class="fullwidthbanner-container">
-      <div class="r_slider" data-width="1920" data-height="630" data-screen="off" data-fullwidth="on">
+      <div class="c_slider" data-width="1920" data-height="975" data-screen="on" data-fullwidth="on">
         <ul>
-          <li class="f_left" data-transition="cube" data-slotamount="7">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_630,w_1920/v1587826286/T%C3%BAM/94881220_223623185632332_6713885661562142720_n_kfhxi4.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
-            <div class="caption lft ltt" data-x="center" data-y="205" data-speed="1500" data-start="1200" data-easing="easeOutBounce">
-              <p>
-<!--                <img src="images/assets/text-slider.png" alt="">-->
-              </p>
-            </div>
-            <div class="caption lft ltt" data-x="center" data-y="250" data-speed="1500" data-start="1600" data-easing="easeOutBounce" style="font-size: 116px; font-style: italic">
-              <p><span class="slider-top big-text big5">PHUN</span></p>
-            </div>
-            <div class="caption lft ltt" data-x="center" data-y="370" data-speed="1500" data-start="2000" data-easing="easeOutBounce" style="font-size: 18px; font-stye: italic">
-              <p class="small-text2">
-                vi chạm<br>thẩm mĩ
-              </p>
-            </div>
-            <div class="caption lft ltt" data-x="680" data-y="255" data-speed="1500" data-start="1400" data-easing="easeOutBounce" style="font-size: 50px; font-style:italic;">
-              <p><span class="slider-top small12">xăm</span></p>
-            </div>
-          </li>
-          <li class="f_left" data-transition="cube" data-slotamount="7">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_630,w_1920/v1588523049/0317-Co-so-vat-chat-1920x757-1_jh44yr.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
-            <div class="caption lft ltt" data-x="550" data-y="140" data-speed="1500" data-start="1200" data-easing="easeOutBounce " style="font-size: 84px;">
+          <li class="f_left bg-mth" data-transition="cube" data-slotamount="7" >
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_1065,w_1920/v1613829929/header/One-Piece-Background-Wallpapers-37204_snzsj8.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
+            <div class="caption lft ltt" data-x="670" data-y="291" data-speed="1500" data-start="1200" data-easing="easeOutBounce" style="font-size:136px">
               <p><span class="slider-top big-text big1"></span></p>
             </div>
-            <div class="caption lft ltt" data-x="630" data-y="210" data-speed="1500" data-start="1400" data-easing="easeOutBounce" style="font-size: 84px;">
-              <p><span class="slider-top big-text big11">Khắc sợi</span></p>
+            <div class="caption lft ltt" data-x="820" data-y="395" data-speed="1500" data-start="1400" data-easing="easeOutBounce"  style="font-size:136px">
+              <p><span class="slider-top big-text big11">COMING</span></p>
             </div>
-            <div class="caption lft ltt" data-x="490" data-y="280" data-speed="1500" data-start="1600" data-easing="easeOutBounce" style="font-size: 110px">
-              <p><span class="slider-top big-text big2" >Thẩm mĩ</span></p>
+            <div class="caption lft ltt" data-x="610" data-y="500" data-speed="1500" data-start="1600" data-easing="easeOutBounce"  style="font-size:178px">
+              <p><span class="slider-top big-text big2">Soon</span></p>
             </div>
-            <div class="caption lft ltt" data-x="400" data-y="225" data-speed="1500" data-start="2000" data-easing="easeOutBounce" style="font-size: 18px; line-height: 20px;">
+            <div class="caption lft ltt" data-x="500" data-y="430" data-speed="1500" data-start="2000" data-easing="easeOutBounce"  style="font-size:25px; line-height: 30px ">
               <p class="small-text">
-                thẩm mĩ<br>đẹp<br>FOR WOMEN
+<!--                Mô hình<br>One piece <br>chất -->
               </p>
             </div>
-            <div class="caption lft ltt" data-x="870" data-y="180" data-speed="1500" data-start="1400" data-easing="easeOutBounce" style="font-size: 50px;font-style: italic">
-              <p><span class="slider-top small1">giảm cân</span></p>
+            <div class="caption lft ltt" data-x="1180" data-y="360" data-speed="1500" data-start="1400" data-easing="easeOutBounce" style="font-size:82px;font-style:italic;">
+<!--              <p><span class="slider-top small1">is</span></p>-->
             </div>
-            <div class="caption lft ltt" data-x="450" data-y="315" data-speed="1500" data-start="1400" data-easing="easeOutBounce" style="font-size: 50px; font-style: italic">
-              <p><span class="slider-top  small1">chạm khắc</span></p>
+            <div class="caption lft ltt" data-x="575" data-y="550" data-speed="1500" data-start="1400" data-easing="easeOutBounce" style="font-size:82px ;font-style:italic;">
+<!--              <p><span class="slider-top  small1">to</span></p>-->
             </div>
+
+          </li>
+          <li class="f_left " data-transition="cube" data-slotamount="7" >
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_1065,w_1920/v1613830250/header/dragon-ball-z-e29da4-4k-hd-desktop-wallpaper-for-4k-ultra-hd-tv-e280a2-wide-1_anfe9u.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
+            <div class="bg-mth caption" style='z-index:1; width:100%;height: 100%; opacity:1; top:0; '></div>
+<!--            <div class="caption lft ltt" data-x="center" data-y="260" data-speed="1500" data-start="1200" data-easing="easeOutBounce" style="font-size: 37px; color: #212121;text-transform: capitalize;">-->
+<!--              <p><span class="slider-top small-text7">New Collection</span></p>-->
+<!--            </div>-->
+            <div class="caption sfr" data-x="center" data-y="300" data-speed="1500" data-start="2500" data-easing="easeOutBounce" style="font-size: 110px">
+              <p><span class="slider-top big-text big1">DragonBallZ</span></p>
+            </div>
+            <div class="caption lft ltt" data-x="center" data-y="420" data-speed="1500" data-start="1400" data-easing="easeOutBounce" style="font-size: 23px; ">
+              <p class="small-text2">
+<!--                Update your everyday essentials<br>-->
+              </p>
+            </div>
+            <div class="caption sfr" data-x="center" data-y="470" data-speed="1500" data-start="2500" data-easing="easeOutBounce" style="font-size: 110px">
+              <p><span class="slider-top big-text big1">2021</span></p>
+            </div>
+<!--            <a class="caption lft ltt btn-slider-2" data-x="center" data-y="620" data-speed="1500" data-start="2500" data-easing="easeOutBounce" style="font-size:16px;border-radius: 20px;padding: 10px 15px; z-index:999; cursor: pointer;">-->
+<!--              SHOW NOW-->
+<!--            </a>-->
+
           </li>
         </ul>
       </div>
     </div>
   </div>
+  <!-- end slider -->
 </section>
 <!-- end slider -->
 <%= javascript_include_tag "plugin/plugin.js" %>
