--- a/app/views/page/header/_right_topbar.html.erb
+++ b/app/views/page/header/_right_topbar.html.erb
@@ -2,7 +2,7 @@
 <div class="right-topbar">
 <div class="mini-cart white">
   <div class="cart-control cart-icon">
-    <img src="images/cart-icon.png" alt="">
+<!--    <img src="images/cart-icon.png" alt="">-->
   </div>
   <div class="cart-label">
     Liên hệ ngay
