--- a/app/views/page/show.html.erb
+++ b/app/views/page/show.html.erb
@@ -1,14 +1,13 @@
 <div id="page">
   <div class="wapper-inner row-offcanvas row-offcanvas-left">
     <main class="wrapper main-content ">
-      <%#= render "page/container/promotion3" %>
-      <%#= render "page/container/slider" %>
-      <%#= render "page/container/section1" %>
-      <%#= render "page/container/carousel_product" %>
-      <%#= render "page/container/colection" %>
-      <%#= render "page/container/my_service" %>
+      <%= render "page/container/slider" %>
+      <%= render "page/container/colection" %>
+      <%= render "page/container/section1" %>
+      <%= render "page/container/carousel_product" %>
+      <%= render "page/container/my_service" %>
       <%#= render "page/colection/colection2" %>
-      <%#= render "page/container/contact" %>
+      <%= render "page/container/contact" %>
     </main>
   </div>
 </div>
