--- a/app/views/page/header/_header.html.erb
+++ b/app/views/page/header/_header.html.erb
@@ -25,17 +25,17 @@
             <!-- .shop-cart -->
             <div class="settings">
               <div class="btn-settings dropdown">
-                <img src="images/settings1.png" alt="">
+<!--                <img src="images/settings1.png" alt="">-->
               </div>
               <!-- ul.toplinks -->
               <div class="toplinks dropdown-content">
                 <div class="set lang clearfix">
                   <span class="title">Select Language</span>
                   <div class="langs clearfix">
-                    <a href="#" class="active"><img src="images/assets/lang1.png" alt=""></a>
-                    <a href="#"><img src="images/assets/lang2.png" alt=""></a>
-                    <a href="#"><img src="images/assets/lang3.png" alt=""></a>
-                    <a href="#"><img src="images/assets/lang4.png" alt=""></a>
+<!--                    <a href="#" class="active"><img src="images/assets/lang1.png" alt=""></a>-->
+<!--                    <a href="#"><img src="images/assets/lang2.png" alt=""></a>-->
+<!--                    <a href="#"><img src="images/assets/lang3.png" alt=""></a>-->
+<!--                    <a href="#"><img src="images/assets/lang4.png" alt=""></a>-->
                   </div>
                 </div>
                 <div class="set currency clearfix">
